--- a/styles.css
+++ b/styles.css
@@ -126,3 +126,19 @@ footer span {
   font-style: italic;
   font-weight: bold;
 }
+
+.back-to-landing {
+  font-weight: bold;
+  display: block; 
+  margin: 0 auto; 
+  padding: 1rem; 
+  text-align: center; 
+  text-decoration: none;
+}
+
+.back-to-landing:hover {
+  text-decoration: underline;
+  color: #ffd700;
+}
+
+
