--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@ footer span {
 }
 
 .back-to-landing {
+  color: #fff;
   font-weight: bold;
   display: block; 
   margin: 0 auto; 
@@ -138,7 +139,7 @@ footer span {
 
 .back-to-landing:hover {
   text-decoration: underline;
-  color: #ffd700;
+  color: #800080;
 }
 
 
