--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@ body {
   animation: gradientAnimation 5s linear infinite;
 }
 
+h1 {
+  text-align: center;
+}
+
 @keyframes gradientAnimation {
   0% {
       background-position: 0% 50%;
